--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+secrets.json
+google-api-credentials.json
 
 # dependencies
 /node_modules
@@ -26,6 +28,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env*
 
 # vercel
 .vercel
