--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prebuild": "node generate-google-api-credentials.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,9 +14,11 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.0.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "firebase": "^9.22.0",
+    "googleapis": "^118.0.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
